[package]
name = "skins"
version = "0.1.0"
authors = ["Tim203 <mctim203@gmail.com>"]
edition = "2018"

[lib]
name = "skins"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = {git = "git://github.com/rusterlium/rustler.git", branch = "master"}
lodepng = { version = "3.4.6", default-features = false }
flate2 = { package = "flate2", version = "1.0.20", features = ["zlib"], default-features = false }
rgb = "0.8.27"
sha2 = "0.9.5"

jsonwebtokens = "1.0.0"
serde_json = "1.0.64"
base64 = "0.13.0"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
bytes = "1.0.1"
