[package]
name = "skins"
version = "0.1.0"
authors = ["Tim203 <mctim203@gmail.com>"]
edition = "2018"

[lib]
name = "skins"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "skins-bin"
path = "src/main.rs"

[dependencies]
rustler = "0.26.0"
lodepng = { version = "3.7.0", default-features = false }
flate2 = { package = "flate2", version = "1.0.24", features = ["zlib"], default-features = false }
rgb = "0.8.34"
sha2 = "0.10.6"

jsonwebtokens = "1.1.0"
serde_json = "1.0.85"
base64 = "0.13.0"
json = "0.12.4"

# skin rendering
image = { version = "0.24.4", features = ["png"] }
imageproc = "0.23.0"
#ril = { version = "0.4.0", features = ["png", "text"] }
